@@ -1,4 +1,8 @@
+Revision history for {{$dist->name}}
+
 {{$NEXT}}
+	Removed duplicate UploadToCPAN (already in classic bundle)
+	Removed SynopsisTests (was annoying me)
 
 1.100970  2010-04-07 13:01:29 EST5EDT
 	Updated with lots more plugins
